syntax = "proto3";
package core.smh.solo.io;
option go_package = "github.com/solo-io/service-mesh-hub/pkg/api/core.smh.solo.io/v1alpha1/types";

import "google/protobuf/wrappers.proto";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

// reference object for kubernetes objects, support multi cluster
message ResourceRef {
    // The name of the object
    string name = 1;

    // The namespace in which the object lives
    string namespace = 2;

    /**
        The cluster on which the object exists. This should be the name under which the cluster
        was registered in Service Mesh Hub, e.g. through `meshctl cluster register`. That name also
        will correspond to a KubernetesCluster resource in the management plane cluster.

        This field not being set will result in an error if the object in question lives on a remote cluster
        (i.e., not a Service Mesh Hub resource).
    */
    string cluster = 3;
}
